<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/lockFragment">

    <fragment
        android:id="@+id/lockFragment"
        android:name="com.securenotes.app.ui.LockFragment"
        android:label="@string/unlock"
        tools:layout="@layout/fragment_lock">

        <action
            android:id="@+id/action_lockFragment_to_notesFragment"
            app:destination="@id/notesFragment"
            app:popUpTo="@id/lockFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/notesFragment"
        android:name="com.securenotes.app.ui.NotesFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_notes">

        <action
            android:id="@+id/action_notesFragment_to_noteEditorFragment"
            app:destination="@id/noteEditorFragment" />
    </fragment>

    <fragment
        android:id="@+id/noteEditorFragment"
        android:name="com.securenotes.app.ui.NoteEditorFragment"
        android:label="@string/edit_note"
        tools:layout="@layout/fragment_note_editor">

        <argument
            android:name="noteId"
            app:argType="long"
            android:defaultValue="0L" />
    </fragment>

</navigation>
